--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,32 @@
 .default {
   @apply font-medium tracking-wide text-slate-700 hover:text-sky-500 transition-colors duration-300;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f3f4f6;
+}
+
+/* Style the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color:	#7dd3fc;
+  border-radius: 5px; 
+  /* Half of the width to make it rounded */
+}
+
+/* Add a pseudo-element for the rounded corners of the thumb */
+::-webkit-scrollbar-thumb:hover::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -2px;
+  bottom: -2px;
+  left: -2px;
+  right: -2px;
+  background-color: #8ccaf1;
+  border-radius: 5px; 
+  /* Same as the width to make it fully rounded */
+}
